* Fixed maps without skyboxes trying to load a nonexistent skybox by loading a sane defualt
* Fixed sending unicast data to a non-client not being properly detected
* Fixed edicts beyond the 128th not rendering on the client
	* Added warnings for when too many client entities (entity_t), dynamic lights and particles are spawned
* Fixed Sys_Error not working

OTHER ENHANCEMENTS AND CHANGES:
* Changed the bamfuslicator texture to have a green tint in order to distinguish it from the supershotgun's model.
* Play a fail sound when the Bamfuslicator fails to spawn an enemy
* Renamed S_RegisterSexedModel -> S_RegisterPlayerModel
* Changed func_team_door from being a point entity to a brush entity
* Made MSG_WriteChar just call MSG_WriteByte rather than duplicate its functionality
	* Change some MSG_WriteChar calls to MSG_WriteByte
* Added the ability for UI controls to be made invisible using the invisible field of ui_control_t and the UI_SetInvisible function.
* More improvements to cl_showinfo:
	* Entities split into Server and Client Entities
	* Maximum number of entities, particles and dynamic lights now shown
* Force a variety of debug vars (cl_showinfo, developer, log_stats) on on debug builds

REMOVALS:
* Removed ValidateSelectedItem function (doesn't do anything???)
* Removed the BFG
	* It's an iconic quake weapon and can't really be used in Zombono
	* It was broken anyway due to using SP2s (the only thing that used them at all!)

Version 0.0.7.299 (Build 299)
April 20, 2024

NEW FEATURES:
* The game now updates automatically! When you start the game, if an update is available, a message box will appear and you will be able to update the game.
	* The 7zip window while updating is temporary and will be removed in the next release when an actual update utility is written.
* Renamed cl_showpos to cl_showinfo:
	* Viewangles (both refdef and client) 
	* Number of entities being rendered
	* Number of dynamic lights being rendered
	* Number of particles being rendered