@@ -502,19 +502,6 @@ char *dm_statusbar =
 
 "yb	-50 "
 
-/*
-// Removed May 3, 2024
-// picked up item
-"if 7 "
-"	xv	0 "
-"	pic 7 "
-"	xv	26 "
-"	yb	-42 "
-"	stat_string 8 "
-"	yb	-50 "
-"endif "
-*/
-
 // timer
 "if 9 "
 "	xv	246 "
